Selected All button on init

--- a/mall-spending/index.html
+++ b/mall-spending/index.html
@@ -99,7 +99,14 @@
 		button.addEventListener('click', function(e) {
 			showBy(this.dataset.gender)
 			selectedButton = this
+			showSelected()
 		})
+
+		if (button.dataset.gender === 'all') {
+			selectedButton = button
+		} 
+
+		showSelected()
 	}
 
 	function showSelected() {
