fixed All on init

--- a/mall-spending/index.html
+++ b/mall-spending/index.html
@@ -102,7 +102,7 @@
 			showSelected()
 		})
 
-		if (button.dataset.gender === 'all') {
+		if (button.dataset.gender === 'All') {
 			selectedButton = button
 		} 
 
