Added Population visualization

--- a/mall-spending/index.html
+++ b/mall-spending/index.html
@@ -13,6 +13,7 @@
 	container.style.height = '400px'
 	container.style.border = '1px solid'
 	container.style.position = 'relative'
+	container.style.borderRadius = '10px'
 	
 	const body = document.querySelector('body')
 	const html = document.querySelector('html')
