changed shape for gender

--- a/titanic/index.html
+++ b/titanic/index.html
@@ -24,6 +24,23 @@
 		.catch(err => console.log(err.message))
 	
 	function handleData(data) {
+		
+		const betterData = data.map(({fields}) => {
+			const el = document.createElement('div')
+			fields.el = el
+			fields.showFare = () => {
+				el.style.height = fields.fare * 100
+			}
+			
+			fields.showAge = () => {
+				el.style.height = fields.age * 100
+			}
+			return fields
+		})
+		
+		// click fare button
+		betterData.forEach((pessenger) => pessenger.showFare())
+		
 		console.log(data)
 		const maxAge = data.reduce((acc, passenger) => { 
 			const age = passenger.fields.age !== undefined ? passenger.fields.age : 0
@@ -40,7 +57,7 @@
 			const agePercent = age / maxAge
  			
 			const el = document.createElement('div')
-			el.style.borderRadius = '50%'
+			el.style.borderRadius = sex === 'female' ? '50% 50% 50% 0' : '50% 0 50% 50%'
 			el.style.width = `${size}px` // Normalize and use %
 			el.style.height = `${size}px`
 			el.style.margin = '1px'
